# ratspatcher

./: Cargo.toml  LICENSE  README.md
src/: action.rs  app.rs  event.rs  gh.rs  main.rs  tui.rs
src/components/: add_repo.rs  dispatch_form.rs  mod.rs  repo_list.rs  run_list.rs  workflow_list.rs
src/model/: mod.rs  repo.rs  run.rs  workflow.rs
